# crystalEditor

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dependency.cmake  Dockerfile  Dockerfile.arm64  Dockerfile.dev  README.deployment.md  README.md  README.v1.250917.md  build-push.sh  build-wasm.sh  build.bat  docker-compose.yml  emsdk.bat  next.config.ts  package-lock.json  package.json  playwright.config.ts  push_wasm.bat  refactoring_phase0_stabilization_baseline_260325.md  refactoring_phase1_dependency_boundary_260324.md  refactoring_plan_260324.md  refactoring_plan_260324_0.md  server.js
app/: globals.css  layout.tsx  page.tsx
app/api/health/: route.ts
app/api/integrate-xsf/: route.ts
app/workbench/: page.tsx
data/: JunctionModelExample.xsf
docs/legacy/atoms-refactory/: README.md
docs/refactoring/: phase1_boundary_rules.md  refactoring_plan_260324.md  refactoring_plan_architecture_completion_phase13plus_260406.md  refactoring_plan_full_modular_architecture_260331.md  refactoring_plan_phase19_legacy_complete_dismantle_codex_260421.md  refactoring_plan_phase19_legacy_complete_dismantle_codex_260421_v2.md  refactoring_plan_phase19_legacy_full_dismantle_claude2_260421.md  refactoring_plan_phase19_verification_gap_closure_claude1_260421.md  refactoring_plan_root_legacy_dismantle_260408.md  refactoring_plan_root_legacy_dismantle_260408_53Codex.md  refactoring_plan_root_legacy_dismantle_260408_54Mini.md  refactoring_result_report_phase0_17_comprehensive_260416.md  refactoring_result_report_phase0_18_comprehensive_260420.md  refactoring_result_report_phase17_root_legacy_dismantle_260416.md  refactoring_result_report_phase18_final_closure_260420.md  refactoring_result_report_phase1_17_integrated_260416.md  refactoring_result_report_phase1_6_260331.md  refactoring_result_report_phase7_12_260406.md  refactoring_verification_report_independent_claude_260420.md
docs/refactoring/phase0/: baseline_manifest_20260325.md  dependency_baseline_report.md  go_no_go_phase1.md  smoke_checklist.md
docs/refactoring/phase1/: dependency_gate_report.md  go_no_go_phase2.md
docs/refactoring/phase10/: dependency_gate_report.md  go_no_go_phase11.md  refactoring_phase10_workspace_mesh_io_decouple_260402.md
docs/refactoring/phase11/: dependency_gate_report.md  go_no_go_phase12.md  refactoring_phase11_shell_panel_objectization_260403.md
docs/refactoring/phase12/: bug_p12_layout_button_latest.md  dependency_gate_report.md  go_no_go_phase13.md  refactoring_phase12_compatibility_facade_seal_ci_gate_260403.md
docs/refactoring/phase13/: dependency_gate_report.md  (+2 more)
k8s-service/: README.md  vtk-workbench.yaml
k8s-testbed/: vtk-workbench copy.yaml  vtk-workbench.backup.250917.yaml  vtk-workbench.yaml
public/unv-data/: BreakingDam_Solid.unv
public/vtk-data/: breaking-dam-ascii.vtk  breaking-dam-binary.vtk  breaking-dam-binary.vtu  elastic-tube-3d-binary.vtk
public/wasm/: VTK-Workbench.js
public/wasm.old2/: VTK-Workbench.js
scripts/: deploy.sh
scripts/refactoring/: check_phase0_dependency_baseline.ps1  check_phase10_workspace_mesh_io_decouple.ps1  check_phase11_shell_panel_objectization.ps1  check_phase12_architecture_seal.ps1  check_phase13_runtime_hard_seal.ps1  check_phase14_state_ownership_alias_zero.ps1  check_phase15_render_platform_isolation.ps1  check_phase17_facade_contract.ps1  check_phase17_mesh_singleton_usage.ps1  check_phase17_port_adapter_contract.ps1  check_phase17_r2_shell_ui_migration.ps1  check_phase17_r3_render_platform_io_migration.ps1  check_phase17_r4_mesh_migration.ps1  check_phase17_r5_atoms_migration.ps1  check_phase17_r5_shell_layout_reset_contract.ps1  check_phase17_r6_atoms_legacy_zero.ps1  check_phase17_root_allowlist.ps1  check_phase17_root_ownership_map.ps1  check_phase17_target_graph_final.ps1  check_phase18_atoms_instance_zero.ps1  check_phase18_doc_contract_full.ps1  check_phase18_facade_include_zero.ps1  check_phase18_final_closure.ps1  check_phase18_legacy_singleton_zero.ps1  check_phase18_ui_regression_evidence.ps1  check_phase18_unused_asset_cleanup.ps1  check_phase19_friend_class_zero.ps1  check_phase1_boundaries.ps1  check_phase3_import_pipeline.ps1  check_phase4_ui_renderer_split.ps1  check_phase5_build_modules.ps1  check_phase6_test_regression.ps1  check_phase7_runtime_composition.ps1  check_phase8_atoms_template_dismantle.ps1  check_phase9_render_boundary_complete.ps1
tests/e2e/: workbench-layout-panel-regression.spec.ts  workbench-smoke.spec.ts
types/: vtk.d.ts
webassembly/src/: app.cpp  app.h  atoms_template_bravais_lattice.cpp  atoms_template_periodic_table.cpp  batchOnly.md  bind_function.cpp  custom_ui.cpp  custom_ui.h  file_loader.cpp  file_loader.h  font_manager.cpp  font_manager.h  image.cpp  image.h  imgui.ini  lcrs_tree.cpp  lcrs_tree.h  main.cpp  mesh.cpp  mesh.h  mesh_detail.cpp  mesh_detail.h  mesh_group.cpp  mesh_group.h  mesh_group_detail.cpp  mesh_group_detail.h  mesh_manager.cpp  mesh_manager.h  model_tree.cpp  model_tree.h  mouse_interactor_style.cpp  refactory.md  refactory3.md  refactory4.md  refactory5.md  refactory_atom_manager.md  refactory_details.md  refactory_details2.md  test_window.cpp  test_window.h  (+8 more)
webassembly/tests/: CMakeLists.txt  test_config.h.in  test_harness.h  test_main.cpp  test_support.h
webassembly/tests/atoms/: cell_transform_test.cpp  measurement_geometry_test.cpp
webassembly/tests/fixtures/io/: sample_chgcar.vasp  sample_grid.xsf  sample_structure.xsf
webassembly/tests/io/: chgcar_parser_test.cpp  xsf_parser_test.cpp
xsf_examples/: CNT_5_5.xsf  CuFCC.xsf  FeBCC.xsf  GrapheneNanoribbonElec.xsf  GrapheneNanoribbonScat.xsf  MoS2_2H.xsf  Si8.xsf  Si8_2_1_1.xsf  Si8_3_3_3.xsf  Si8_3_4_5.xsf  SiBulk.xsf  Si_wire_1_1_24_vac_0.000.xsf  Si_wire_1_1_24_vac_10.000.xsf  TABS.parsed.json  TiHCP.xsf  error_missingAtoms.xsf  error_noDet.xsf  error_noDet.xsf.code-workspace  error_notXSF.xsf  extract_tabs_info.py  extract_tabs_info_v1.py  extract_tabs_info_v2.py  graphene_arrow.xsf  rutile.xsf  siesta.RHO.cube  skutterudite.xsf  strain_Si_wire_1_1_24_vac_10.000.xsf  validate_grid_alignment.py
(+482 files in other folders)
